Bug 73241 - FILEOPEN: RTF file opens with extra page breaks
Summary: FILEOPEN: RTF file opens with extra page breaks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA Confirmed:4.2.0.1:OSX target:4.4....
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-01-02 23:06 UTC by Couly
Modified: 2015-12-17 12:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Document can not be opened correctly, but ok with openoffice (538.69 KB, application/rtf)
2014-01-02 23:06 UTC, Couly
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Couly 2014-01-02 23:06:13 UTC
Created attachment 91443 [details]
Document can not be opened correctly, but ok with openoffice

Problem description: 

Steps to reproduce:
1. connect to http://www.marchespublicspme.com/dc4.html....
2. open form DC4....
3. ....

Current behavior: open 12 pages

Expected behavior: open 4 pages

              
Operating System: Windows 8
Version: 4.1.4.2 release
Comment 1 Thomas van der Meulen [retired] 2014-01-03 11:34:54 UTC
The file opens in 5 pages in OpenOffice. also the file opens in 5 pages in version 3.5
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735

In version 3.6 the file opens in 12 pages, so since then there is a recression.
Version 3.6.7.2 (Build ID: e183d5b)
Comment 2 Thomas van der Meulen [retired] 2014-01-03 11:35:17 UTC
OS: mac osx 10.9.1
Comment 3 Thomas van der Meulen [retired] 2014-01-03 11:44:07 UTC
Correction: the file opens in 7 pages is 3.5 
In 3.4 it opens in 5 pages so the recression is since 3.5 and it gets worse further in 3.6 to 12 pages. 

sorry for so many comments.
Comment 4 retired 2014-01-03 12:06:21 UTC
Confirmed:4.2.0.1:OSX

5 pages in Word 2010, 12 pages in LO 4.2.0.1
Comment 5 Michael Stahl 2014-07-02 19:06:54 UTC
Comment on attachment 91443 [details]
Document can not be opened correctly, but ok with openoffice

ah... this is actually an RTF it's just got a .DOC suffix for additional confusion
Comment 6 Michael Stahl 2014-07-02 20:12:08 UTC
lots of extra page breaks in 3.6.7, 3.5.7 and 3.5.3 already,
so it's the new RTF filter

hmm... 3.5.2 had about 4 page breaks less...

hmm... reverting this commit gets rid of some but not all page breaks:

commit 5fa13451520a3e7e291611b47a151f770eaf3314
Author:     Miklos Vajna <vmiklos@suse.cz>
AuthorDate: Wed Apr 4 11:04:45 2012 +0200

    fdo#48104 fix RTF import of \page in inner groups
Comment 7 Miklos Vajna 2014-07-05 10:45:19 UTC
It seems the problem is that Word ignores \page inside a table, but Writer does not.
Comment 8 Commit Notification 2014-07-05 12:07:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fdc235126d6d73f47a5b56d453e1d3db8ba3e816

fdo#73241 RTF import: ignore page break in tables



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Miklos Vajna 2014-07-05 12:39:18 UTC
-4-3 review: https://gerrit.libreoffice.org/10092
-4-2 review: https://gerrit.libreoffice.org/10093
Comment 10 Commit Notification 2014-07-06 08:23:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=197e9fb4e7fa857d764bcd66a97474c393d8308f&h=libreoffice-4-2

fdo#73241 RTF import: ignore page break in tables


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-07-07 11:15:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e262086784defe1c0f417eedf52b5de2db8e559e&h=libreoffice-4-3

fdo#73241 RTF import: ignore page break in tables


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 12:37:30 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]