fdo#73241 RTF import: ignore page break in tables

(cherry picked from commit fdc235126d6d73f47a5b56d453e1d3db8ba3e816)

Conflicts:
	sw/qa/extras/rtfimport/rtfimport.cxx
	writerfilter/source/rtftok/rtfdocumentimpl.cxx

Change-Id: Ibee9fec0f421b4c2ff3d45c861bc3fcfc97cbf15
Reviewed-on: https://gerrit.libreoffice.org/10093
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>